--- a/TouristAssist/app/src/main/res/values/strings.xml
+++ b/TouristAssist/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_restaurant_detail">Restaurant_detail</string>
+    <string name="title_activity_mall_detail">Mall_detail</string>
 </resources>
