--- a/TouristAssist/app/src/main/res/values/strings.xml
+++ b/TouristAssist/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_restaurant_detail">Restaurant_detail</string>
     <string name="title_activity_mall_detail">Mall_detail</string>
+    <string name="title_activity_hospital_detail">Hospital_detail</string>
 </resources>
