--- a/TouristAssist/app/src/main/res/values/strings.xml
+++ b/TouristAssist/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="title_activity_restaurant_detail">Restaurant_detail</string>
     <string name="title_activity_mall_detail">Mall_detail</string>
     <string name="title_activity_hospital_detail">Hospital_detail</string>
+    <string name="title_activity_bar_detail">Bar_detail</string>
 </resources>
